--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
