--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.71.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
